# claude-vault

./: .gitignore  .mcp.json  .mcp.json.example  AWESOME_MCP_SUBMISSION.md  GITHUB_TOKEN_QUICKSTART.md  MCP_SO_SUBMISSION.md  PUBLISHING.md  README.md  install.sh  smithery.yaml
.github/workflows/: publish-pypi.yml  release.yml
docs/: GITHUB_MCP_SETUP.md  MCP.md  QUICK_START.md  SETUP.md
docs/dev/: CODE_SERVER_SETUP.md
examples/test-service/: .env.example  .gitignore  README.md  VIDEO_SCRIPT.md  docker-compose.yml
examples/test-service/html/: index.html
mcp_vault/: .gitignore  README.md  WEBAUTHN_SETUP.md  pyproject.toml
mcp_vault/src/mcp_vault/: __init__.py  approval_server.py  security.py  server.py  session.py  vault_client.py
mcp_vault/src/mcp_vault/tools/: __init__.py  auth.py  inject.py  read.py  write.py
